# OpencvData

Face_Recognition_Dlib/: Face_alignment.py  Face_feature_point_detection.py  Faces_detection.py
FeatureExtraction/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
Fundamentals_of_digital_image/.ipynb_checkpoints/: Read and Save Image-checkpoint.ipynb
Image arguements/: demo_20210928.py
Image arguements/.ipynb_checkpoints/: Filter-checkpoint.ipynb
Image enhancement/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
ImageArguements/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
ImageBinaryzation/: Untitled.ipynb
ImageEnhancement/.ipynb_checkpoints/: Code-checkpoint.ipynb
IndustrialManufacturing/GeomCheck/: CMakeLists.txt  Hough.py  demo.py  demo2.py  demo_20220307.cpp  test_general_hough.py
IndustrialManufacturing/GeomCheck/Lab1/: Lab.py  Lab1.docx  test.py
IndustrialManufacturing/ImageSegmentation/: Kmeans.py  demo.py  watershed.py
IndustrialManufacturing/Review/: SplitCharacter.py  demo.py  demo2.py
Lab1/: 1.ipynb  2.1.ipynb  2.2.ipynb  3.1.ipynb  Lab1.docx  Numpy_Basic.docx
Lab1/.ipynb_checkpoints/: 1-checkpoint.ipynb  3.2-checkpoint.ipynb  4-checkpoint.ipynb
Lab2/: Lab2.docx
Lab2/.ipynb_checkpoints/: SpectrumShaping-checkpoint.ipynb
Lab3/: Lab.ipynb  Lab3.docx
Lab3/.ipynb_checkpoints/: Lab-checkpoint.ipynb
Lab4/: Lab4.docx  Untitled.ipynb
Opencv_Course_Design/: Opencv4.doc  main.py
Opnecv/Image arguements/: Sobeling.ipynb
Opnecv/Image enhancement/: Code.ipynb  Untitled.ipynb
(+4 files in other folders)
