
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
SET(PROJECT_NAME MV)
PROJECT(${PROJECT_NAME})

FIND_PACKAGE(OpenCV REQUIRED)
    
INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS})

set(DEBUG_LEVEL 2)

if(${DEBUG_LEVEL} LESS 2)
    SET(CMAKE_BUILE_TYPE RELEASE)   
    SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -Od -W0 -MT")
else()
    SET(CMAKE_BUILE_TYPE DEBUG)  
    SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -W0 -Od -MTd")
endif()    
 
 
add_executable(demo_20220307.exe  ./demo_20220307.cpp)
set_target_properties(demo_20220307.exe PROPERTIES COMPILE_FLAGS "/arch:AVX2 /Zi")
if(${DEBUG_LEVEL} EQUAL 1)
    set_target_properties(demo_20220307.exe PROPERTIES LINK_FLAGS " /DEBUG")
endif()
TARGET_LINK_LIBRARIES(demo_20220307.exe ${OpenCV_LIBS} )


    
    
    
    
